Fixes tile button alignment and adds destroy option to ignored suggested tiles

--- a/app/assets/stylesheets/tile/tile_thumbnail/_tiles_thumbnails_controls.css.scss
+++ b/app/assets/stylesheets/tile/tile_thumbnail/_tiles_thumbnails_controls.css.scss
@@ -43,6 +43,11 @@
     cursor: pointer;
     margin-left: 5px;
 
+    &.right {
+      margin-left: 0;
+      margin-right: 5px;
+    }
+
     &:hover {
       i {
         color: #262626;
@@ -110,19 +115,6 @@
       }
     }
   }
-}
-
-.archive,
-.active,
-.explore {
-  .tile_buttons {
-    float: right;
-    margin-right: 11px;
-  }
-}
-
-.incomplete_button {
-  float: left;
 }
 
 .tile_container.explore {
